# process_analyser

./: .coveragerc  .env.example  .gitignore  README.md  collect.py  collector.py  detect.py  import.py  main.py  model.json  pyproject.toml  requirements.txt  settings.py  setup.cfg  utils.py
.github/workflows/: ci-tests.yml  python-app.yml
aggregator/: aggregation_settings.py  aggregator.py
aggregators/: __init__.py
algorythm/: algorythm.py  utils.py
algorythms/: __init__.py
collectors/: __init__.py  base_collector.py  csv_collector.py  db_collector.py
commands/: __init__.py  base_command.py  collect_command.py  detect_command.py  import_command.py  shell_command.py
data_getters/: __init__.py
db/: __init__.py  anomaly_log.py  base.py  raw_cleaned_value.py  raw_value.py
detect_process/: __init__.py  detect_process.py
detector/: __init__.py  settings.py
detector/aggregator/: aggregation_settings.py  aggregator.py
detector/algorythm/: __init__.py  algorythm.py  exceptions.py  splits.py  states.py  utils.py
detector/collectors/: __init__.py  base_collector.py  csv_collector.py  db_collector.py
detector/commands/: base_command.py  collect_command.py  detect_command.py  import_command.py
detector/data_getter/: __init__.py  process_getter.py
detector/db/: __init__.py  anomaly_log.py  helpers.py  raw_cleaned_value.py  raw_value.py  session.py
detector/detect_process/: detect_process.py
detector/loggers/: base_logger.py  db_logger.py  (+2 more)
loggers/: __init__.py  base_logger.py  console_logger.py  db_logger.py  file_logger.py
tests/: conftest.py
(+68 files in other folders)
